@@ -1,8 +1,7 @@
 package de.niclasl.multiPlugin.stats.listener;
 
 import de.niclasl.multiPlugin.GuiConstants;
-import de.niclasl.multiPlugin.stats.gui.MinedBlocksGui;
-import de.niclasl.multiPlugin.stats.gui.StatsGui;
+import de.niclasl.multiPlugin.MultiPlugin;
 import org.bukkit.*;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
@@ -14,7 +13,7 @@ import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.UUID;
 
-public class MinedBlocksGuiListener implements Listener {
+public record MinedBlocksGuiListener(MultiPlugin plugin) implements Listener {
 
     @EventHandler
     public void onInventoryClick(InventoryClickEvent event) {
@@ -29,8 +28,8 @@ public class MinedBlocksGuiListener implements Listener {
         // Metadaten prüfen
         if (!player.hasMetadata("block_target") || !player.hasMetadata("block_page")) return;
 
-        UUID targetUUID = UUID.fromString(player.getMetadata("block_target").get(0).asString());
-        int page = player.getMetadata("block_page").get(0).asInt();
+        UUID targetUUID = UUID.fromString(player.getMetadata("block_target").getFirst().asString());
+        int page = player.getMetadata("block_page").getFirst().asInt();
 
         int slot = event.getSlot();
 
@@ -40,7 +39,8 @@ public class MinedBlocksGuiListener implements Listener {
             try {
                 int count = Bukkit.getOfflinePlayer(targetUUID).getStatistic(Statistic.MINE_BLOCK, mat);
                 if (count > 0) totalMinedBlocks++;
-            } catch (IllegalArgumentException ignored) {}
+            } catch (IllegalArgumentException ignored) {
+            }
         }
 
         int blocksPerPage = GuiConstants.ALLOWED_SLOTS.length; // oder hardcoded: 45
@@ -51,7 +51,7 @@ public class MinedBlocksGuiListener implements Listener {
         if (slot == 26) { // zurück zur Übersicht
             OfflinePlayer target = getTarget(player);
             if (target instanceof Player onlineTarget)
-                StatsGui.open(player, onlineTarget);
+                plugin.getEnchantGUI().open(player, onlineTarget);
             else {
                 player.sendMessage("§cTarget player not found.");
                 player.closeInventory();
@@ -62,14 +62,14 @@ public class MinedBlocksGuiListener implements Listener {
         // Button: Vorherige Seite
         if (slot == 35 && page > 1) {
             OfflinePlayer target = Bukkit.getOfflinePlayer(targetUUID);
-            MinedBlocksGui.open(player, target, page - 1);
+            plugin.getMinedBlocksGui().open(player, target, page - 1);
             return;
         }
 
         // Button: Nächste Seite
         if (slot == 44 && page < totalPages) {
             OfflinePlayer target = Bukkit.getOfflinePlayer(targetUUID);
-            MinedBlocksGui.open(player, target, page + 1);
+            plugin.getMinedBlocksGui().open(player, target, page + 1);
         }
     }
 
